// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout can be rendered as home 1`] = `
<DocumentFragment>
  <header>
    <a
      class="main-container main-container--content flex focus:outline-none focus:ring-2 focus:ring-red-600"
      href="/"
    >
      <picture>
        <source
          media="(min-width: 640px)"
          srcset="/icons/app/icons8-dungeons-and-dragons-128.png"
        />
        <source
          media="(min-width: 480px)"
          srcset="/icons/app/icons8-dungeons-and-dragons-96.png"
        />
        <img
          alt="[Translation for https://example.com/global/translations.ttl#appLogoDescription does not exist]"
          src="/icons/app/icons8-dungeons-and-dragons-64.png"
        />
      </picture>
      <div
        class="font-serif text-2xl sm:text-3xl md:text-4xl self-center antialiased"
      >
        [Translation for https://example.com/global/translations.ttl#appName does not exist]
      </div>
    </a>
  </header>
  <main>
    test
  </main>
  <footer
    class="main-container main-container--content md:flex mt-2"
  >
    <div
      class="md:flex-grow mb-2"
    >
      <a
        class="link mr-1 p-1"
        href="/about"
      >
        [Translation for https://example.com/global/translations.ttl#aboutTitle does not exist]
      </a>
      <a
        class="link mr-1 p-1"
        href="/faq"
      >
        [Translation for https://example.com/global/translations.ttl#faqShort does not exist]
      </a>
    </div>
    <div
      class="mb-2"
    />
  </footer>
</DocumentFragment>
`;

exports[`Layout renders as non-home by default 1`] = `
<DocumentFragment>
  <header>
    <a
      class="main-container main-container--content flex focus:outline-none focus:ring-2 focus:ring-red-600"
      href="/"
    >
      <picture>
        <source
          media="(min-width: 640px)"
          srcset="/icons/app/icons8-dungeons-and-dragons-128.png"
        />
        <source
          media="(min-width: 480px)"
          srcset="/icons/app/icons8-dungeons-and-dragons-96.png"
        />
        <img
          alt="[Translation for https://example.com/global/translations.ttl#appLogoDescription does not exist]"
          src="/icons/app/icons8-dungeons-and-dragons-64.png"
        />
      </picture>
      <div
        class="font-serif text-2xl sm:text-3xl md:text-4xl self-center antialiased"
      >
        [Translation for https://example.com/global/translations.ttl#appName does not exist]
      </div>
    </a>
  </header>
  <main
    class="main-container main-container--content my-1"
  >
    test
  </main>
  <footer
    class="main-container main-container--content md:flex mt-2"
  >
    <div
      class="md:flex-grow mb-2"
    >
      <a
        class="link mr-1 p-1"
        href="/about"
      >
        [Translation for https://example.com/global/translations.ttl#aboutTitle does not exist]
      </a>
      <a
        class="link mr-1 p-1"
        href="/faq"
      >
        [Translation for https://example.com/global/translations.ttl#faqShort does not exist]
      </a>
    </div>
    <div
      class="mb-2"
    />
  </footer>
</DocumentFragment>
`;
